# SOARandomizer

./: .gitignore  .gitmodules  Cargo.toml  README.md
libs/alx/: Cargo.toml  README.md
libs/alx/src/: error.rs  items.rs  lib.rs  lookups.rs
libs/alx/src/csv/: export.rs  import.rs  mod.rs
libs/alx/src/entries/: accessory.rs  armor.rs  character.rs  character_magic.rs  character_super_move.rs  crew_member.rs  enemy.rs  enemy_encounter.rs  enemy_event.rs  enemy_magic.rs  enemy_ship.rs  enemy_super_move.rs  enemy_task.rs  exp_boost.rs  exp_curve.rs  magic_exp_curve.rs  mod.rs  playable_ship.rs  ship_accessory.rs  ship_cannon.rs  ship_item.rs  shop.rs  special_item.rs  spirit_curve.rs  swashbuckler.rs  traits.rs  treasure_chest.rs  usable_item.rs  weapon.rs  weapon_effect.rs
libs/alx/src/game/: mod.rs  offsets.rs  region.rs  root.rs
libs/alx/src/io/: aklz.rs  binary.rs  enp.rs  enp_builder.rs  enp_dump.rs  iso.rs  mod.rs  strings.rs
libs/alx/tests/: test_accessories.rs  test_armors.rs  test_character_magic.rs  test_character_super_moves.rs  test_characters.rs  test_crew_members.rs  test_csv_export.rs  test_enemies.rs  test_enemy_encounters.rs  test_enemy_magic.rs  test_enemy_ships.rs  test_enemy_super_moves.rs  test_enp_roundtrip.rs  test_exp_boosts.rs  test_iso.rs  test_item_database.rs  test_playable_ships.rs  test_roundtrip.rs  test_ship_accessories.rs  test_ship_cannons.rs  test_ship_items.rs  test_shops.rs  test_special_items.rs  test_spirit_curves.rs  test_swashbucklers.rs  test_treasure_chests.rs  test_usable_items.rs  test_weapons.rs
(+3 files in other folders)
