[package]
name = "alx"
version = "0.1.0"
edition = "2021"
description = "Skies of Arcadia Legends data extraction and modification library"
license = "GPL-3.0"

[dependencies]
gc_fst = { path = "../../submodules/gc_fst" }
byteorder = "1.5"
thiserror = "2"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
encoding_rs = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.14"
crc32fast = "1.4"
